[package]
name = "incremental-query"
version = "0.1.0"
edition = "2021"
description = "implementation of an incremental compilation algorithm similar to rustc's"
authors = ["Jonathan Dönszelmann <jonathan@donsz.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdonszelmann/incremental-query"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
siphasher = "1.0.1"
bumpalo = "3.16.0"
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rand = "0.8.5"
