[package]
name = "incremental-query-macros"
version = "0.2.0"
edition = "2021"
description = "implementation of an incremental compilation algorithm similar to rustc's"
authors = ["Jonathan Dönszelmann <jonathan@donsz.nl>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdonszelmann/incremental-query"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro-error = "1"
proc-macro2 = "1"
